<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/colorBackground1"
    android:padding="6dp">

    <TextView
        android:id="@+id/text"
        style="@style/word_style"
        android:layout_height="@dimen/word_height"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_gravity="center_vertical"
        android:text="@string/defaultText"
        />

    <TextView
        android:id="@+id/profile"
        style="@style/word_style"
        android:layout_height="@dimen/word_height"
        android:layout_width="wrap_content"
        android:textSize="12sp"
        android:layout_gravity="center_vertical"
        android:text="@string/defaultProfile"
        />

    <Button
        android:id="@+id/delete_button"
        style="@style/button_style"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_vertical"
        android:text="@string/button_delete" />

    <Button
        android:id="@+id/edit_button"
        style="@style/button_style"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center_vertical"
        android:text="@string/button_edit"/>

</LinearLayout>