<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv"
    android:layout_margin="6dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardBackgroundColor="@color/colorBackground1"
    card_view:cardElevation="2dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:focusable="true"
        android:focusableInTouchMode="false">

        <View
            android:id="@+id/barrefavori"
            android:layout_width="4dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="6dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="6dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/text"
            style="@style/word_style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/word_height"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/barrefavori"
            android:layout_toEndOf="@+id/barrefavori"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/defaultText"
            />

        <TextView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:text="@string/texte_debug"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_toRightOf="@+id/barrefavori"
            android:layout_toEndOf="@+id/barrefavori"
            android:textSize="12sp"
            android:layout_below="@+id/text"
            />
        <Button
            android:id="@+id/delete_button"
            style="@style/button_style"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_vertical"
            android:layout_below="@+id/profile"
            android:text="@string/button_delete" />

        <Button
            android:id="@+id/edit_button"
            style="@style/button_style"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_vertical"
            android:layout_below="@+id/delete_button"
            android:text="@string/button_edit"/>


    </RelativeLayout>

</android.support.v7.widget.CardView>

